client/src/global.scss
html, body {
	position: relative;
	width: 100%;
	height: 100%;
}

nav {
	> ul {
		
		border-bottom: 10px solid #cfcfcf;
		background-color: #cfcfcf;
	}
	.tab {
		background-color: #cfcfcf;
	}			
}

body {
	color: #333;
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;

	

	&.dark {
		color: #bbb;
		background-color: #111;

		input, button, select, textarea {
			background-color: #333;
			color: #bbb;
			border: 1px solid #666;
		}


		nav {
			> ul {
				border-bottom-color: #222;
				background-color: #222;
			}
			.tab {
				background-color: #222;
			}			
		}
	}
}

a {
	color: rgb(0,100,200);
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

a:visited {
	color: rgb(0,80,160);
}

label {
	display: block;
}

input, button, select, textarea {
	font-family: inherit;
	font-size: inherit;
	-webkit-padding: 0.4em 0;
	padding: 0.4em;
	margin: 0 0 0.5em 0;
	box-sizing: border-box;
	border: 1px solid #ccc;
	border-radius: 2px;
}

input:disabled {
	color: #ccc;
}

button {
	color: #333;
	background-color: #f4f4f4;
	outline: none;
}

button:disabled {
	color: #999;
}

button:not(:disabled):active {
	background-color: #ddd;
}

button:focus {
	border-color: #666;
}

